<resources>
    <string name="app_name">Tour Guide Austin</string>
    <string name="tab_text_1">Local Speak</string>
    <string name="tab_text_2">Good Eats</string>
    <string name="tab_text_3">Sights To See</string>
    <string name="tab_text_4">Fun In Town</string>
    <string name="tab_text_5">Music Venues</string>
    <string name="name_label">Name:</string>
    <string name="category_label">Category:</string>
    <string name="address_label">Address:</string>
    <string name="website_label">Website:</string>
    <string name="common_label">Common Speak:</string>
    <string name="localsp_label">Local Speak:</string>
    <string name="local_tip_label">Local Tip:</string>
    <string name="tools_text_name">Name</string>
    <string name="tools_text_category">Category</string>
    <string name="tools_text_address">Address</string>
    <string name="tools_text_website">Website</string>
    <string name="tools_text_local_tip">Local Tip</string>
    <string name="tools_text_common">Others say</string>
    <string name="tools_text_localsp">Austinites say </string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
