<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_padding_vertical"
    android:paddingLeft="@dimen/layout_padding_horizontal"
    android:paddingRight="@dimen/layout_padding_horizontal"
    android:paddingTop="@dimen/layout_padding_vertical">

    <ImageView
        android:id="@+id/location_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/layout_padding_vertical"
        tools:ignore="ContentDescription"
        tools:src="@drawable/santorini"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/poi_label_style"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/name"
            style="@style/displaytext_style"
            android:textSize="@dimen/name_text_size"
            android:textStyle="bold"
            tools:text="@string/tools_text_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/poi_label_style"
            android:text="@string/category_label" />

        <TextView
            android:id="@+id/category"
            style="@style/displaytext_style"
            tools:text="@string/tools_text_category" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/poi_label_style"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/address"
            style="@style/displaytext_style"
            tools:text="@string/tools_text_address" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/poi_label_style"
            android:text="@string/website_label" />

        <TextView
            android:id="@+id/website"
            style="@style/displaytext_style"
            android:autoLink="web"
            android:textColorLink="@color/colorPrimary"
            android:textStyle="italic"
            tools:text="@string/tools_text_website" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/poi_label_style"
            android:text="@string/local_tip_label" />

        <TextView
            android:id="@+id/local_tip"
            style="@style/displaytext_style"
            tools:text="@string/tools_text_local_tip" />

    </LinearLayout>

</LinearLayout>